train bidirectional gru instead of lstm

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /models/*_.pth
-/models/faiss.index
+/models/tower_one_*.pth
+/models/tower_two_*.pth
+models/faiss.index
 /data/*
 /src/__pycache__/*
 */__pycache__/*
